+ log the location of loaded transformlet